FLOE-437: wrap play/stop buttons in <a> to improve keyboard accessibility

--- a/demos/src/css/chartAuthoring-demo.css
+++ b/demos/src/css/chartAuthoring-demo.css
@@ -56,7 +56,7 @@ body {
     max-width: 32px;
 }
 
-.floe-sonifierPlay img:hover, .floe-sonifierStop img:hover, .floe-sonifierPlay img:focus, .floe-sonifierStop img:focus {
+.floe-sonifierPlay:hover img, .floe-sonifierStop:hover img, .floe-sonifierPlay:focus img, .floe-sonifierStop:focus img {
     background-color:#BBB;
 }
 
